--- a/scss/footer.css
+++ b/scss/footer.css
@@ -28,7 +28,7 @@ footer .container {
   justify-content: space-between;
 }
 footer .container .info {
-  font-size: 36px;
+  font-size: 30px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
@@ -49,11 +49,15 @@ footer .container .left .down_logo {
   padding-bottom: 25px;
 }
 footer .container .left .down_logo img {
-  width: 75px;
-  height: 75px;
+  width: 50px;
+  height: 50px;
 }
 footer .container .right {
   white-space: nowrap;
+}
+footer .container .right .soc_net a img {
+  width: 50px;
+  height: 50px;
 }
 footer .container .footer_bottom {
   display: flex;
@@ -61,7 +65,7 @@ footer .container .footer_bottom {
   width: 100%;
 }
 footer .container .footer_bottom .footer_mortgages {
-  font-size: 36px;
+  font-size: 24px;
   font-style: normal;
   font-weight: 700;
   padding-top: 10px;
@@ -78,7 +82,7 @@ footer .container .footer_bottom .nav {
   flex: 1 1 100%;
 }
 footer .container .footer_bottom .nav p {
-  font-size: 24px;
+  font-size: 20px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
@@ -108,7 +112,8 @@ footer .container .footer_bottom .footer_text {
     display: flex;
     gap: 30px;
   }
-  footer .container .right .info, footer .container .left .info {
+  footer .container .right .info,
+  footer .container .left .info {
     font-size: 26px;
   }
   footer .container .left {
