--- a/scss/footer.scss
+++ b/scss/footer.scss
@@ -141,7 +141,9 @@ footer {
 
             .right {
                 .soc_net {
+                    padding-top: 20px;
                     display: flex;
+                    justify-content: space-around;
                     gap: 30px;
                 }
             }
