--- a/scss/header.css
+++ b/scss/header.css
@@ -10,6 +10,10 @@
   font-family: Montserrat, sans-serif;
 }
 
+body.open {
+  overflow: hidden;
+}
+
 header {
   display: flex;
   justify-content: space-around;
@@ -30,10 +34,19 @@ header .container {
   justify-content: space-between;
 }
 header .container .header_top {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 5;
+  transition: background-color 0.6s ease;
   display: flex;
   flex-direction: column;
   flex: 1 1 100%;
   justify-content: space-between;
+  --shadow: none;
+  box-shadow: var(--shadow);
+  transition: box-shadow 0.3s ease;
 }
 header .container .header_top nav {
   background-color: rgba(255, 255, 255, 0.6);
@@ -108,11 +121,13 @@ header .container .header_top nav .down_menu .catalog_down:hover + .drop {
 }
 header .container .header_top .burger_menu {
   display: none;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.6);
 }
 header .container .header_top .burger_menu .burger_bottom {
+  align-self: center;
   border-radius: 2px;
-  margin-top: 20px;
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -210,6 +225,14 @@ header .container .header_top .burger_menu .burger_list .add_catalog a::before {
 header .container .header_top .burger_menu .burger_list .add_catalog.open {
   max-height: 300px;
 }
+header .container .header_top .burger_menu .burger_list .down_burger_soc_net {
+  display: flex;
+  justify-content: space-around;
+  width: 200px;
+}
+header .container .header_top .burger_menu .burger_list .down_burger_soc_net a img {
+  width: 40px;
+}
 header .container .header_top .burger_menu .burger_list.open {
   left: 0;
   transition: left 0.5s ease 0s;
@@ -227,7 +250,7 @@ header .container .header_top .ticker {
 }
 header .container section {
   display: flex;
-  margin-top: 40px;
+  margin-top: 150px;
   padding-inline: 30px;
   display: flex;
   gap: 5%;
@@ -382,6 +405,9 @@ header .container section form button p {
   header .container .header_top nav {
     font-size: 16px;
   }
+  header .container section .header_bottom .information {
+    font-size: 14px;
+  }
   header .container section .header_bottom form .one_click_call {
     font-size: 26px;
   }
@@ -394,11 +420,33 @@ header .container section form button p {
     display: none;
   }
   header .container .header_top .burger_menu {
+    padding: 10px;
     padding-top: 10px;
     display: flex;
   }
-  header .container .header_top .burger_menu a .header_logo_mobile {
+  header .container .header_top .burger_menu .header_logo_mobile {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    gap: 5%;
+  }
+  header .container .header_top .burger_menu .header_logo_mobile p {
+    white-space: nowrap;
+    font-size: 26px;
+    font-weight: 700;
+  }
+  header .container .header_top .burger_menu .header_logo_mobile img {
     width: 50px;
+  }
+  header .container .header_top .burger_menu .header_soc_net {
+    align-self: center;
+    display: flex;
+    justify-content: space-around;
+    gap: 6%;
+  }
+  header .container .header_top .burger_menu .header_soc_net img {
+    width: 40px;
+    height: 40px;
   }
   header .container .header_top .burger_menu .burger_list {
     font-size: 20px;
@@ -418,6 +466,9 @@ header .container section form button p {
     flex: 1 1 50%;
     margin-right: 0px;
   }
+  header .container section .header_bottom .some_extra_info {
+    display: none;
+  }
   header .container section form {
     gap: 30px;
     max-width: 300px;
@@ -431,6 +482,13 @@ header .container section form button p {
   }
 }
 @media (max-width: 500px) {
+  header .container .header_top .burger_menu .header_logo_mobile p {
+    font-size: 16px;
+  }
+  header .container .header_top .burger_menu .header_soc_net a img {
+    width: 30px;
+    height: 30px;
+  }
   header .container section .header_bottom .some_extra_info {
     justify-content: center;
     gap: 20px;
