--- a/scss/header.scss
+++ b/scss/header.scss
@@ -10,6 +10,10 @@
     font-family: Montserrat, sans-serif;
 }
 
+body.open {
+    overflow: hidden;
+}
+
 header {
     display: flex;
     justify-content: space-around;
@@ -30,11 +34,19 @@ header {
         justify-content: space-between;
 
         .header_top {
-
+            position: fixed;
+            top: 0;
+            left: 0;
+            right: 0;
+            z-index: 5;
+            transition: background-color 0.6s ease;
             display: flex;
             flex-direction: column;
             flex: 1 1 100%;
             justify-content: space-between;
+            --shadow: none;
+            box-shadow: var(--shadow);
+            transition: box-shadow 0.3s ease;
 
             nav {
                 background-color: rgba(255, 255, 255, 0.6);
@@ -130,11 +142,13 @@ header {
 
             .burger_menu {
                 display: none;
-                justify-content: space-around;
+                justify-content: space-evenly;
+                align-items: center;
+                background-color: rgba(255, 255, 255, 0.6);
 
                 .burger_bottom {
+                    align-self: center;
                     border-radius: 2px;
-                    margin-top: 20px;
                     display: flex;
                     flex-direction: column;
                     justify-content: space-around;
@@ -143,7 +157,6 @@ header {
                     width: 30px;
                     background-color: #FF6B6B;
                     box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
-
 
                     span {
                         box-sizing: border-box;
@@ -253,6 +266,19 @@ header {
                     .add_catalog.open {
                         max-height: 300px;
                     }
+
+                    .down_burger_soc_net {
+                        display: flex;
+                        justify-content: space-around;
+                        width: 200px;
+
+                        a {
+                            img {
+                                width: 40px;
+
+                            }
+                        }
+                    }
                 }
 
                 .burger_list.open {
@@ -279,7 +305,7 @@ header {
 
         section {
             display: flex;
-            margin-top: 40px;
+            margin-top: 150px;
             padding-inline: 30px;
             display: flex;
             gap: 5%;
@@ -471,6 +497,10 @@ header {
 
             section {
                 .header_bottom {
+                    .information {
+                        font-size: 14px;
+                    }
+
                     form {
                         .one_click_call {
                             font-size: 26px;
@@ -490,18 +520,44 @@ header {
             width: 100%;
 
             .header_top {
-
                 nav {
                     display: none;
                 }
 
                 .burger_menu {
+                    padding: 10px;
                     padding-top: 10px;
                     display: flex;
 
-                    a {
-                        .header_logo_mobile {
+                    .header_logo_mobile {
+                        display: flex;
+                        align-items: center;
+                        justify-content: space-around;
+                        gap: 5%;
+
+                        p {
+                            white-space: nowrap;
+                            font-size: 26px;
+                            font-weight: 700;
+
+                        }
+
+                        img {
                             width: 50px;
+                        }
+
+                    }
+
+                    .header_soc_net {
+
+                        align-self: center;
+                        display: flex;
+                        justify-content: space-around;
+                        gap: 6%;
+
+                        img {
+                            width: 40px;
+                            height: 40px;
                         }
                     }
 
@@ -526,6 +582,10 @@ header {
                     .some_extra_info {
                         flex: 1 1 50%;
                         margin-right: 0px;
+                    }
+
+                    .some_extra_info {
+                        display: none;
                     }
                 }
 
@@ -556,6 +616,25 @@ header {
 
     header {
         .container {
+            .header_top {
+                .burger_menu {
+                    .header_logo_mobile {
+                        p {
+                            font-size: 16px;
+                        }
+                    }
+
+                    .header_soc_net {
+                        a {
+                            img {
+                                width: 30px;
+                                height: 30px;
+                            }
+                        }
+                    }
+                }
+            }
+
             section {
                 .header_bottom {
                     .some_extra_info {
